# SlashDiscord

./: .editorconfig  .gitignore  CODEOWNERS  CONTRIBUTERS.md  LICENSE  README.md  commitlint.config.js  demo.py  design.txt  pyproject.toml  setup.cfg  setup.py
.eggs/pytest_runner-5.3.1-py3.10.egg/EGG-INFO/: requires.txt
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml  stale.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: lint-pr.yml
scripts/: build.ps1  build.zsh  publish.zsh
slashReppo/: __init__.py  wrapper.py
slashReppo/client/: client.py  client.pyi  error.py
slashReppo/command/: __init__.py  command.py  command.pyi
slashReppo/util/: bitfield.py  bitfield.pyi  embed.py  embed.pyi  gateway.py  gateway.pyi  interaction.py  interaction.pyi  socket.py  socket.pyi  user.py  user.pyi
src/SlashDiscord/: __init__.py
src/SlashDiscord.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/SlashDiscord/SlashDiscord.egg-info/: SOURCES.txt  top_level.txt
src/SlashDiscord/client/: client.py  client.pyi
src/SlashDiscord/command/: command.py  command.pyi
src/SlashDiscord/util/: embed.py  interaction.pyi  user.py  user.pyi
