[metadata]
name = SlashDiscord
version = 0.1.0
author = Joshua Brown & Matt Dray
author_email = Josh@Mjbrowns.com
description = Extra lightweight discord slash command library
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Reppo-Bot/SlashDiscord
platform = Any
license = GNU GPLv3
project_urls =
    Bug Tracker = https://github.com/Reppo-Bot/SlashDiscord/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
